# Userspace-Deduplication-Filesystem

./: .autotools  .cproject  .gitignore  .project  Makefile.in  README  configure  configure.ac  container.c  container.h  directory.c  directory.h  global.h  inode.c  inode.h  lfs  lfs.c  lfs.c.orig  lfs.h  log  makefile  makefile.old  util.c  util.h
fuse-2.9.3/: Makefile  config.status  libtool
fuse-2.9.3/doc/: Makefile
fuse-2.9.3/example/: Makefile  cusexmp  fioc  fioclient  fsel  fselclient  fusexmp  fusexmp_fh  hello  hello_ll  null
fuse-2.9.3/example/.deps/: cusexmp.Po  fioc.Po  fioclient-fioclient.Po  fsel.Po  fselclient-fselclient.Po  fusexmp.Po  fusexmp_fh.Po  hello.Po  hello_ll.Po  null.Po
fuse-2.9.3/example/.libs/: cusexmp  fioc  fsel  fusexmp  fusexmp_fh  hello  hello_ll  lt-hello  null
fuse-2.9.3/include/: Makefile
fuse-2.9.3/lib/: Makefile
fuse-2.9.3/lib/.deps/: buffer.Plo  cuse_lowlevel.Plo  fuse.Plo  fuse_kern_chan.Plo  fuse_loop.Plo  fuse_loop_mt.Plo  fuse_lowlevel.Plo  fuse_mt.Plo  fuse_opt.Plo  fuse_session.Plo  fuse_signals.Plo  helper.Plo  iconv.Plo  mount.Plo  mount_util.Plo  subdir.Plo  ulockmgr.Plo
fuse-2.9.3/lib/.libs/: libfuse.so.2.9.3  libulockmgr.so.1.0.1
fuse-2.9.3/util/: Makefile  fusermount  mount.fuse  ulockmgr_server
src/: Makefile.am  Makefile.in  constants.c  constants.h  container.c  container.h  container_header.c  container_header.h  container_types.h  container_utility.c  container_utility.h  container_utils.c  container_utils.h  directory.c  directory.h  file_recipe.c  file_recipe.h  fingerprint.c  fingerprint.h  global.h  inode.c  inode.h  inodemap.c  inodemap.h  lfs.c  lfs.h  lfs_addr.c  lfs_addr.h  lfs_ctx.c  lfs_ctx.h  lfs_errors.c  lfs_errors.h  lfs_lowlevel_ops.c  lfs_lowlevel_ops.h  lfs_operations.c  lfs_operations.h  lfs_reserved.c  lfs_reserved.h  lfs_stat.c  lfs_stat.h  (+17 more)
(+4 files in other folders)
